--- a/less/navigation.less
+++ b/less/navigation.less
@@ -32,13 +32,26 @@
         width: 100%;
         justify-content: space-around;
       }
-      
-      
+
       a {
         font-size: 1.6rem;
         color: @font-color;
         text-decoration: none;
       }
+      .a-white {
+        color: white;
+      }
+    }
+    .search {
+      width: 200px;
+      border: 1px solid #3c3c3c24;
+      height: 28px;
+      font-size: 1.3rem;
+      padding: 10px 5px;
+      border-radius: 5px;
+    }
+    .white::placeholder {
+      color: white;
     }
   }
 } // .main-navigation
