--- a/less/navigation.less
+++ b/less/navigation.less
@@ -44,14 +44,25 @@
     }
     .search {
       width: 200px;
-      border: 1px solid #3c3c3c24;
+      border: 1px solid black;
       height: 28px;
       font-size: 1.3rem;
       padding: 10px 5px;
       border-radius: 5px;
+      outline: none;
     }
-    .white::placeholder {
+    .black::placeholder {
+      color: black;
+    }
+    .searchFocus {
       color: white;
+      border: 1px solid white;
+      height: 28px;
+      font-size: 1.3rem;
+      padding: 10px 5px;
+      border-radius: 5px;
+      outline: none;
+      width: 200px;
     }
   }
 } // .main-navigation
