--- a/css/index.css
+++ b/css/index.css
@@ -220,10 +220,11 @@ img {
 }
 .main-navigation .nav-container .search {
   width: 200px;
-  border: 1px solid black;
+  border: none;
+  background: #ededed;
   height: 28px;
   font-size: 1.3rem;
-  padding: 10px 5px;
+  padding: 10px 15px;
   border-radius: 50px;
   outline: none;
 }
@@ -232,11 +233,11 @@ img {
 }
 .main-navigation .nav-container .searchFocus {
   color: white;
-  border: 1px solid white;
+  border: 1px dashed rgba(255, 255, 255, 0.448);
   height: 28px;
   font-size: 1.3rem;
-  padding: 10px 5px;
-  border-radius: 5px;
+  padding: 10px 15px;
+  border-radius: 50px;
   outline: none;
   width: 200px;
 }
