--- a/less/navigation.less
+++ b/less/navigation.less
@@ -44,10 +44,11 @@
     }
     .search {
       width: 200px;
-      border: 1px solid black;
+      border: none;
+      background: rgb(237, 237, 237);
       height: 28px;
       font-size: 1.3rem;
-      padding: 10px 5px;
+      padding: 10px 15px;
       border-radius: 50px;
       outline: none;
     }
@@ -56,11 +57,11 @@
     }
     .searchFocus {
       color: white;
-      border: 1px solid white;
+      border: 1px dashed rgba(255, 255, 255, 0.448);
       height: 28px;
       font-size: 1.3rem;
-      padding: 10px 5px;
-      border-radius: 5px;
+      padding: 10px 15px;
+      border-radius: 50px;
       outline: none;
       width: 200px;
     }
