--- a/less/home-page.less
+++ b/less/home-page.less
@@ -46,6 +46,10 @@
         }
       }
     }
+    .btn {
+      .button-creator(150px, 45px, @button-bg, @white, 1.4rem);
+      outline: none;
+    }
   }
 
   .inverse-content {
