--- a/css/index.css
+++ b/css/index.css
@@ -232,7 +232,6 @@ img {
   color: black;
 }
 .main-navigation .nav-container .searchFocus {
-  color: white;
   border: 1px dashed rgba(255, 255, 255, 0.448);
   height: 28px;
   font-size: 1.3rem;
@@ -296,6 +295,31 @@ img {
   .home .content-section .img-content img {
     width: 100%;
   }
+}
+.home .content-section .btn {
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150px;
+  height: 45px;
+  background-color: #17A2B8;
+  color: #FFFFFF;
+  border: 1px solid #C0C0C0;
+  cursor: pointer;
+  font-size: 1.4rem;
+  outline: none;
+}
+@media (max-width: 500px) {
+  .home .content-section .btn {
+    width: 100%;
+  }
+}
+.home .content-section .btn:hover {
+  background: #FFFFFF;
+  color: #17A2B8;
 }
 .home .inverse-content {
   padding-bottom: 30px;
