--- a/less/navigation.less
+++ b/less/navigation.less
@@ -56,7 +56,16 @@
       color: black;
     }
     .searchFocus {
-      border: 1px dashed rgba(255, 255, 255, 0.448);
+      border: 1px dashed teal;
+      height: 28px;
+      font-size: 1.3rem;
+      padding: 10px 15px;
+      border-radius: 50px;
+      outline: none;
+      width: 200px;
+    }
+    .searchFocusSroll {
+      border: 1px dashed rgb(23, 97, 97);
       height: 28px;
       font-size: 1.3rem;
       padding: 10px 15px;
