--- a/css/index.css
+++ b/css/index.css
@@ -232,7 +232,16 @@ img {
   color: black;
 }
 .main-navigation .nav-container .searchFocus {
-  border: 1px dashed rgba(255, 255, 255, 0.448);
+  border: 1px dashed teal;
+  height: 28px;
+  font-size: 1.3rem;
+  padding: 10px 15px;
+  border-radius: 50px;
+  outline: none;
+  width: 200px;
+}
+.main-navigation .nav-container .searchFocusSroll {
+  border: 1px dashed #176161;
   height: 28px;
   font-size: 1.3rem;
   padding: 10px 15px;
@@ -271,6 +280,9 @@ img {
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
+}
+.home .content-section .text-content h2 {
+  cursor: pointer;
 }
 @media (max-width: 500px) {
   .home .content-section .text-content {
@@ -320,6 +332,12 @@ img {
 .home .content-section .btn:hover {
   background: #ffffff;
   color: #17a2b8;
+}
+.home .hide {
+  display: none;
+}
+.home .show {
+  display: block;
 }
 .home .inverse-content {
   padding-bottom: 30px;
